# multi-agent-rl-for-vertical-farm-microclimate-control

./: .gitignore  README.md  app.py  dashboard.py  explore_obs.py  phase3_rewards.py  phase4_multiagent.py  phase5_comparison.py  requirements.txt  retrain_improved.py  test_env.py  test_setup.py  train_baseline.py
GreenLight-Gym2/: .gitignore  CITATION.cff  README.md  pyproject.toml
GreenLight-Gym2/RL/: experiment_manager.py  utils.py
GreenLight-Gym2/common/: callbacks.py  evaluation.py  learning_rate.py  results.py
GreenLight-Gym2/configs/: README.md
GreenLight-Gym2/configs/agents/: ppo.yml  recurrentppo.yml  rule_based.yml  sac.yml
GreenLight-Gym2/configs/sweeps/: ppo.yml  recurrentppo.yml  sac.yml
GreenLight-Gym2/experiments/: evaluate_baseline.py  evaluate_rl.py  stochastic_rl.py  weather_generalization.py
GreenLight-Gym2/gl_gym/: __init__.py
GreenLight-Gym2/gl_gym/components/: actions.py  observations.py  parameters.py  price_model.py  rewards.py  rule_based.py  samplers.py  weather.py
GreenLight-Gym2/gl_gym/configs/: default_params.py  greenlight_parameters.py
GreenLight-Gym2/gl_gym/core/: types.py
GreenLight-Gym2/gl_gym/environments/: README.md  __init__.py  greenlight_env.py  utils.py  (+1 more)
GreenLight-Gym2/post_processing/: weather_generalization.py
GreenLight-Gym2/processing/: extract_controls_weather.py  extract_wand_data.py  fetch_weather_nasa.py  merge_controls_pipe_temp.py
GreenLight-Gym2/run_scripts/: eval_baseline.sh  eval_rl.sh  rec_rl.sh  train_rl.sh
GreenLight-Gym2/tests/: custom_action.py  custom_obs.py  custom_parameters.py  custom_reward.py  env_test.py  rule_based_baseline.py  weather_sampling.py
GreenLight-Gym2/visualisations/: cost_metrics.py  execution_times.py  inspect_mat.py  learning_curve.py  lollipop_waterfall_plot.py  param_uncertainty.py  plot_config.py  trajectories.py
(+7 files in other folders)
