[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gl-gym"
version = "0.3.1"
description = "Gymnasium environment for RL-based greenhouse tomato crop production control using the GreenLight model"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }

authors = [{ name = "Bart van Laatum", email = "bart.vanlaatum@wur.nl" }]
keywords = ["reinforcement learning", "greenhouse", "control", "gymnasium", "greenlight", "crop production"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "casadi>=3.6",
  "numpy<2.0",
  "scipy>=1.10",
  "pandas>=2.0",
  "gymnasium>=0.29",
  "PyYAML>=6.0",
  "pytz>=2019.3",
]

[project.optional-dependencies]
train = [
  "torch>=2.0.0",
  "stable-baselines3>=2.1.0",
  "sb3_contrib>=2.1.0",
  "wandb>=0.19",
  "tensorboard>=2.18",
  "tqdm>=4.60",
  "matplotlib>=3.10",
  "requests>=2.32",
  "geopy>=2.4",
]

[project.urls]
Homepage = "https://github.com/BartvLaatum/GreenLight-Gym2"
Documentation = "https://github.com/BartvLaatum/GreenLight-Gym2#readme"
Repository = "https://github.com/BartvLaatum/GreenLight-Gym2"
Changelog = "https://github.com/BartvLaatum/GreenLight-Gym2/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["gl_gym*"]

[tool.setuptools.package-data]
"gl_gym" = [
  "data/weather/Amsterdam/*.csv",
  "configs/envs/*.yml",
]
